--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -30,10 +30,11 @@
 <!ENTITY Ctr_tabs2			"弧形标签页 (仿 Australis)">
 <!ENTITY Ctr_tabs3			"弧形标签页 (Aero 风格)">
 <!ENTITY Ctr_tabforminfo	"标签页外观由当前的主题所控制">
-<!ENTITY Ctr_tabsontop0		"标签栏在顶部 (默认) - [没有设置]">
-<!ENTITY Ctr_tabsontop1		"标签栏在顶部 - 设置 [tabsontop=true]">
-<!ENTITY Ctr_tabsontop2		"标签栏不在顶部 - 设置 [tabsontop=false]">
-<!ENTITY Ctr_tabsontop3		"标签栏不在顶部 (v2) - 设置 [tabsontop=false]">
+<!ENTITY Ctr_tabsontop0		"标签栏在顶部 (默认)">
+<!ENTITY Ctr_tabsontop1		"标签栏在顶部 --- 设置 [tabsontop=true]">
+<!ENTITY Ctr_tabsontop2		"标签栏不在顶部 (v1) --- 设置 [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"标签栏不在顶部 (v2) --- 设置 [tabsontop=false]">
+<!ENTITY Ctr_tabsontopW1	"v2 is for some add-ons and complete themes only!">
 <!ENTITY Ctr_tabsontopI1	"添加属性 [tabsontop=true/false] 至">
 <!ENTITY Ctr_tabsintitlebar	"标签栏嵌入标题栏 (about:config)">
 <!ENTITY Ctr_tabwidthdef	"(默认)">
@@ -46,6 +47,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"Values below 48px will cause glitches in most cases!">
 <!ENTITY Ctr_emptyfavicon	"使用空白网站小图标 (如果网站没有提供)">
 <!ENTITY Ctr_noemptypticon	"为固定的标签页移除小图标">
+<!ENTITY Ctr_e10stab_notd	"E10s tabs: remove underline">
 <!ENTITY Ctr_closetab_0		"标签页关闭按钮">
 <!ENTITY Ctr_closetab_1		"只在激活的标签页中显示">
 <!ENTITY Ctr_closetab_2		"不显示">
@@ -62,6 +64,7 @@
 <!ENTITY Ctr_appbutton1		"在工具栏上显示">
 <!ENTITY Ctr_appbutton1wt	"在工具栏上显示 (纯文本)">
 <!ENTITY Ctr_appbutton2		"在标题栏上显示">
+<!ENTITY Ctr_appbutton2h	"在标题栏上显示 (hidden)">
 <!ENTITY Ctr_appbutton2io	"在标题栏上显示 (图标)">
 <!ENTITY Ctr_paneluibtweak	"在标签页栏上显示橙色面板菜单按钮">
 <!ENTITY Ctr_appbuttonc_o	"橙色按钮 (默认)">
@@ -91,9 +94,11 @@
 <!ENTITY Ctr_smallnavbut	"在工具栏上使用小图标">
 <!ENTITY Ctr_bfurlbarfix	"当处于「后退」按钮可以移动和小图标显示模式时，修改地址栏圆弧半径">
 <!ENTITY Ctr_backforward	"使「后退」按钮可以移动">
+<!ENTITY Ctr_nbcompact		"Reduce navigation toolbars height">
 <!ENTITY Ctr_hide_bf_popup	"鼠标长按时隐藏历史菜单">
 <!ENTITY Ctr_bf_space		"Reduce space between buttons (if possible)">
 <!ENTITY Ctr_noconicons		"使用标签来替代菜单中的图标 (后退, 前进, 停止, 重新加载, 书签页面)">
+<!ENTITY Ctr_svgfilters		"SVG colors for default toolbar button icons">
 <!ENTITY Ctr_wincontrols	"使窗口控制按钮可以移动">
 <!ENTITY Ctr_emptyfavicon2	"使用空白页面的图标来取代常规图标(空白或没有的)">
 <!ENTITY Ctr_mstatusbar		"使状态栏面板可以移动">
@@ -200,9 +205,12 @@
 <!ENTITY Ctr_altmenubarpos	"替代位置 (在 Firefox 标题栏下方)">
 <!ENTITY Ctr_menubarnofog	"移除背景颜色/模糊 (Windows AeroGlass / Win8)">
 
+<!ENTITY Ctr_aerocolors		"Blue Aero colors for main toolbars and tabs">
 <!ENTITY Ctr_hidenavbar		"隐藏工具栏">
 <!ENTITY Ctr_nobookbarbg	"书签栏: 移除背景颜色">
 <!ENTITY Ctr_nonavbarbg		"导航栏: 移除背景颜色">
+<!ENTITY Ctr_nonavbarbg1	"This add-on's additional toolbars and other top toolbars are affected.">
+<!ENTITY Ctr_nonavbarbg2	"All toolbars in 'The Fox, Only Better' add-on's Slim Chrome are affected.">
 <!ENTITY Ctr_nonavborder	"书签栏: 添加上边框">
 <!ENTITY Ctr_nonavtbborder	"顶部工具栏: 移除工具栏边框">
 <!ENTITY Ctr_hidesbclose	"Sidebars: hide sidebar close button">
@@ -226,6 +234,11 @@
 <!ENTITY Ctr_otherctroptns	"Other settings">
 <!ENTITY Ctr_cuibotbuttons	"在界面自定义模式中显示更多按钮">
 <!ENTITY Ctr_bookmarkoinpw	"'Open in a new private window' entry in bookmarks context menu">
+
+<!ENTITY Ctr_experttweaks	"Advanced">
+<!ENTITY Ctr_fx33layers		"Firefox 33+ introduced 'new render features' currently responsible for 'hanging tabs' on some systems. Unchecking this preference resolves this issue.">
+<!ENTITY Ctr_fx34search		"Firefox 34+ introduced a 'new seach ui'. Unchecking this preference returns the 'old seach ui'.">
+<!ENTITY Ctr_fx34loop		"Firefox 34+ introduced 'calling and conversation' features. Unchecking this preference removes them.">
 
 
 <!ENTITY Ctr_pw_settings	"设置">
